--- a/app/templates/prepper-stats.template.html
+++ b/app/templates/prepper-stats.template.html
@@ -1,39 +1,40 @@
-<form>
-    <div class="logo">
-      <img class="logo_header" src="logo.png" alt="">
-      <h1 class="stat_header">Enter your stats</h1>
+<nav-component></nav-component>
+<form ng-submit="$ctrl.calsPerDay();">
+  <div class="header_section">
+    <h1 class="stat_header">Enter your stats</h1>
+  </div>
+
+  <div><input ng-model="$ctrl.username" placeholder="Enter your name"></div>
+  <div class="age_height">
+    <div class="age">
+      <label class="info_label">Age:</label>
+      <input ng-model="$ctrl.age" class="age_input" id="age" type="number" ng-value="27" ng-change="$ctrl.calsPerDay();">
     </div>
-
-    <div class="age_height">
-      <div class="age">
-        <label class="info_label">Age:</label>
-        <input class="age_input" id="age" type="number" oninput="calsPerDay()" value="27">
-      </div>
-      <div class="height">
-        <label class="info_label">Height:</label>
-        <input class="height_input" id="height" type="number" oninput="calsPerDay()" value="70">
-      </div>
+    <div class="height">
+      <label class="info_label">Height:</label>
+      <input ng-model="$ctrl.height" class="height_input" id="height" type="number" ng-value="70" ng-change="$ctrl.calsPerDay();">
     </div>
+  </div>
 
-    <div class="male_female">
-      <div class="male">
-        <label class="info_label">Male:</label>
-        <input class="radio_sex" id="male" type="radio" name="gender" onchange="calsPerDay()" checked>
-      </div>
-      <div class="female">
-        <label class="info_label">Female:</label>
-        <input class="radio_sex" id="female" type="radio" name="gender" onchange="calsPerDay()">
-      </div>
+  <div class="male_female">
+    <div class="male">
+      <label class="info_label">Male:</label>
+      <input ng-model="$ctrl.sex" value="male" class="radio_sex" id="male" type="radio" name="gender" checked ng-change="$ctrl.calsPerDay();">
     </div>
-
-    <div class="weight">
-      <label class="info_label">Weight:</label>
-      <input class="weight_input" id="weight" type="number" oninput="calsPerDay()" value="225">
+    <div class="female">
+      <label class="info_label">Female:</label>
+      <input ng-model="$ctrl.sex" value="female" class="radio_sex" id="female" type="radio" name="gender" ng-change="$ctrl.calsPerDay();">
     </div>
+  </div>
 
-    <label class="cal_info" onclick="calsPerDay">
-      Base metabolic rate: <span id="totalCals"></span> kcal per day
-    </label>
+  <div class="weight">
+    <label class="info_label">Weight:</label>
+    <input ng-model="$ctrl.weight" class="weight_input" id="weight" type="number" ng-value="225" ng-change="$ctrl.calsPerDay();">
+  </div>
 
-    <button type="button" class="go_button" onclick="logCals()">Go!</button>
-  </form>
+  <label class="cal_info">
+    You need {{ $ctrl.result }} calories per day.
+  </label>
+
+  <button class="go_button">Go!</button>
+</form>
