--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -5,6 +5,20 @@
     animation: glow 3s infinite;
 }
 
+.popup {
+  width: 300px;
+  background-color: red;
+  height: 300px;
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.close {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
 
 
 @keyframes glow {
@@ -18,7 +32,7 @@
     }
     30% {
       box-shadow: 2px 2px 4px rgba(234, 236, 99, 0.7),
-                   -2px -2px 4px rgba(234, 236, 99, 0.7);
+                   -2px -2px 4px rgba(234, 236, 236, 99, 0.7);
     }
     50% {
       box-shadow: 20px 20px 50px rgba(234, 236, 115, 0.5),
