--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -4,7 +4,7 @@
 .nav-logo {
     animation: glow 3s infinite;
 }
-
+/*About Popup*/
 .popup {
   width: 300px;
   background-color: red;
@@ -21,10 +21,39 @@
 }
 
 .item_box {
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 100%;
+  margin: 1rem;
+  border: 1px solid teal;
 }
 
+/*Bag Containers */
+.bag-container {
+  display: flex;
+  background-color: orange;
+  border: 1px solid grey;
+  width: 50%;
+  margin: 0 auto;
+}
+
+.food-choices-container {
+  display: flex;
+  flex-direction: column;
+}
+.food-choices {
+  margin: 0 auto 20px auto;
+  /* display: flex; */
+  background-color: red;
+  border: 1px solid purple;
+  width: 50%;
+  height: 100%;
+  flex-wrap: wrap;
+}
+
+.food_img {
+  width: 100%;
+  height: 50px;
+}
 
 @keyframes glow {
     0% {
@@ -44,3 +73,19 @@
                    -20px -20px 50px rgba(234, 236, 115, 0.5);
     }
   }
+/******* Running Timer *******/
+/* .running-timer {
+  background : url(../img/running_man8.png);  
+  width: 128px;
+  height: 150px;
+  animation: walk-east 1s steps(8) infinite,
+              forward 10s linear infinite;
+} */
+@keyframes walk-east {
+from { background-position: 0px; }  
+  to { background-position: -1024px; }
+}
+@keyframes forward {
+  from { transform: translateX(-100px); }  
+  to { transform: translateX(1916px); }  
+}
