--- a/app/templates/locations.template.html
+++ b/app/templates/locations.template.html
@@ -16,6 +16,8 @@
 </section>
     
 <footer>
-    <div class="man" style="{{$ctrl.timerAnimation}}"></div>
+    <div class="man_box" style="{{$ctrl.timerAnimation}}">
+        <div class="man"></div>
+    </div>
     <button class="bug_out_btn" ng-click="$ctrl.moveToNextLocation();">Bug Out!</button>
 </footer>
