--- a/app/templates/prepper-stats.template.html
+++ b/app/templates/prepper-stats.template.html
@@ -4,15 +4,15 @@
     <h1 class="stat_header">Enter your stats</h1>
   </div>
 
-  <div><input ng-model="$ctrl.user.username" placeholder="Enter your name"></div>
+  <div><input ng-model="$ctrl.user.username" placeholder="Enter your name" value="Thor"></div>
   <div class="age_height">
     <div class="age">
       <label class="info_label">Age:</label>
-      <input ng-model="$ctrl.user.age" class="age_input" id="age" type="number" ng-value="27" ng-change="$ctrl.calsPerDay();">
+      <input ng-model="$ctrl.user.age" class="age_input" class="num_input" id="age" type="number" min="0" ng-value="27" ng-change="$ctrl.calsPerDay();" value="36">
     </div>
     <div class="height">
       <label class="info_label">Height in Inches:</label>
-      <input ng-model="$ctrl.user.height" class="height_input" id="height" type="number" ng-value="70" ng-change="$ctrl.calsPerDay();">
+      <input ng-model="$ctrl.user.height" class="height_input" class="num_input" id="height" type="number" min="0" ng-value="70" ng-change="$ctrl.calsPerDay();" value="70">
     </div>
   </div>
 
@@ -29,7 +29,7 @@
 
   <div class="weight">
     <label class="info_label">Weight:</label>
-    <input ng-model="$ctrl.user.weight" class="weight_input" id="weight" type="number" ng-value="225" ng-change="$ctrl.calsPerDay();">
+    <input ng-model="$ctrl.user.weight" class="weight_input" class="num_input" id="weight" type="number" min="0" ng-value="225" ng-change="$ctrl.calsPerDay();" value="200">
   </div>
 
   <label class="cal_info">
