--- a/app/templates/nav.template.html
+++ b/app/templates/nav.template.html
@@ -8,10 +8,10 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="">About <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#!/">About <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="" ng-click="$ctrl.resetGame();">Quit</a>
+          <a class="nav-link" href="#!/landing-page-component" ng-click="$ctrl.resetGame();">Quit</a>
         </li>
       
         <li class="nav-item dropdown">
