Making styling updates to Prepper page, landing page, location page, got new backgrounds to show on each location.

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -254,6 +254,7 @@ from { background-position: 0px; }
   top: 6px;
   right: -4px;
   border-radius: 100%;
+  color: black;
   background-color: white;
 }
 .text {
