--- a/app/css/prepper-stats.css
+++ b/app/css/prepper-stats.css
@@ -1,103 +1,74 @@
+* {
+    margin: 0;
+    padding: 0;
+    outline: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background-image: url(dt_bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Roboto", sans-serif;
+}
+
 form {
-    height: 100%;
+    background-color: rgba(255, 255, 255, .5);
+    text-align: center;
+    padding: 2rem;
+    height: 85%;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    /* justify-content: space-around; */
+    justify-content: space-around;
+    align-items: center;
 }
 
 .logo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 1rem 0;
+    width: 65px;
+    margin: 0 auto;
 }
 
 .logo_header {
     margin-right: 2rem;
 }
 
+.name_input {
+    width: 45%;
+    text-align: center;
+}
+
+label {
+    margin-right: .25rem;
+}
+
 input {
-    margin-left: 10px;
-}
-
-.stat_header {
-    margin-bottom: 2rem;
-}
-
-.info_label {
-    display: inline-block;
-}
-
-.age_height {
-    display: flex;
-    padding: 10px;
-    justify-content: space-evenly;
-}
-
-.age_input {
-    padding: 10px;
-    width: 60px;
-    display: inline-block;
-}
-
-.height_input {
-    padding: 10px;
-    width: 60px;
+    padding: .25rem;
+    text-align: center;
 }
 
 .male_female {
+    width: 50%;
     display: flex;
-    justify-content: space-evenly;
-    margin: 3rem 0;
-}
-
-.cal_info {
-    display: block;
-    margin: 3rem 0;
-}
-
-.weight_input {
-    width: 60px;
-    bottom: 0;
-    position: relative;;
+    justify-content: space-between;
 }
 
 .go_button {
-    width: 25%;
-    margin: 0 auto;
-    padding: .5rem;
-    background-image: linear-gradient(rgba(200, 100, 100, .5), rgba(150, 200, 50, .75));
-    border: 1px solid white;
-    border-radius: 2px;
+    width: 50%;
+    padding: 1rem;
 }
 
-/* .radio_sex {
-    background-color: red;
+@media only screen and (min-width: 600px) {
+    form {
+        font-size: 25px;
+        width: 80%;
+    }
+    .male_female {
+        width: 25%;
+        justify-content: space-around;
+    }
 }
-
-.sex_label {
-    box-shadow: 0.1em 0.1em 0.2em #888;
-    margin: 1em;
-    border-radius: 1ex;
-    padding: 1ex 1em;
-} */
-
-/* 
-label {
-    display: inline-block;
-    width: 100px;
-    box-shadow: 0.1em 0.1em 0.2em #888;
-    margin: 1em;
-    border-radius: 1ex;
-    padding: 1em 1em;
-  }
-input[type=number] {
-    text-align: right;
-    border: none;
-}
-input {
-    float: right;
-}
-span {
-    font-weight: bold;
-} */
