--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -197,6 +197,28 @@ from { background-position: 0px; }
   animation: walk-east 1s steps(1) infinite;
 }
 
+@keyframes animatedBackground {
+  0% { background-position: 0 0; background-color: skyblue; }
+  25% { background-position: 50% 0; background-color: darkorange }
+  35% { background-color: darkmagenta}
+  50% { background-position: 100% 0; background-color: darkblue; }
+  65% { background-color: darkmagenta }
+  75% { background-position: -50% 0; background-color: darkorange}
+  100% { background-position: 0 0; background-color: skyblue; }
+}
+
+.animate-background	{ 
+	width: 100%; 
+	height: 924px; 
+	background-image: url("../img/silhouette-buildings-12.png");
+	background-position: 0px 0px;
+  background-repeat: repeat-x;
+  background-color: darkblue;
+
+	animation: animatedBackground 80s linear infinite;
+}
+
+
 /* Story Bubble */
 .talk-bubble {
   margin: 40px;
