--- a/app/templates/landing-page.template.html
+++ b/app/templates/landing-page.template.html
@@ -1,5 +1,5 @@
     <header class="landing_page_logo">
-        <img src="../img/logofull.png" alt="">
+        <img src="../img/Other_Big_Full_Logo.png" alt="">
     </header>
 
     <div class="landing_button_container">
@@ -8,8 +8,9 @@
     </div>
 
 
-<section class="popup" ng-show="$ctrl.popup">
-    <h1>Doomsday Trail</h1>
-    <p>Doomsday Trail is a game based on the game Oregon Trail. During an apocolypse you need to grab food items to survive. Find out how long you will survive, if it all, by playing Doomsday Trail.</p>
-    <i class="material-icons close" ng-click="$ctrl.close();">clear</i>
-</section>
+    <section class="popup" ng-show="$ctrl.popup">
+        <img src="../img/close-x-32.png" class="close-btn" ng-click="$ctrl.close();">
+        <h1 class="about-title">Doomsday Trail</h1>
+        <p>Doomsday Trail is a game based on the game Oregon Trail. During an apocolypse you need to grab food items to survive. Find out how long you will survive, if it all, by playing Doomsday Trail.</p>
+        
+    </section>
