--- a/app/templates/prepper-stats.template.html
+++ b/app/templates/prepper-stats.template.html
@@ -23,11 +23,11 @@
     <div class="male_female">
         <div class="male">
             <input ng-model="$ctrl.user.sex" type="radio" class="radio_item" value="male" name="item" id="radio1" ng-change="$ctrl.calsPerDay();">
-            <label class="label_item" for="radio1"> <img class="male_img" src="man-silhouette.png"> </label>
+            <label class="label_item" for="radio1"> <img class="male_img" src="../img/male.jpg"> </label>
         </div>
         <div class="female">
             <input ng-model="$ctrl.user.sex" type="radio" class="radio_item" value="female" name="item" id="radio2" ng-change="$ctrl.calsPerDay();">
-            <label class="label_item" for="radio2"> <img class="female_img" src="female-silhouette.png"> </label>
+            <label class="label_item" for="radio2"> <img class="female_img" src="../img/female.jpg"> </label>
         </div>
         </div>
 
