--- a/app/css/landing-page.css
+++ b/app/css/landing-page.css
@@ -18,17 +18,33 @@
   }  
   .close-btn {
     position: absolute;
-    top: 0;
-    right: 0;
-    padding: 4%;
-    width: 50px;
+    top: 10px;
+    right: 10px;
+    /* padding: 4%; */
+    width: 15px;
   }
   
   .about-title {
-    margin-top: 13%;
+    margin-top: 9%;
   }
 
-/* End About Pop Up 
+/* End About Pop Up */
+
+.landing_button_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.landing_buttons {
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  margin: 20px;
+  width: 20%;
+  font-size: 20px;
+ }
 
 
 
@@ -49,7 +65,11 @@
       height: 300px;     
     }
     .close-btn {
-      width: 15%;
+      width: 30px;
+    }
+
+    .about-title {
+      margin-top: 5%;
     }
   
   }
@@ -64,9 +84,11 @@
       height: 300px;  
     }
     .close-btn {
-      width: 15%;
-     
-      
+      width: 40px;
+    }
+
+    .about-title {
+      margin-top: 5%;
     }
   
   }
