--- a/app/css/prepper-stats.css
+++ b/app/css/prepper-stats.css
@@ -6,14 +6,7 @@
 }
 
 body {
-    background-image: url(dt_bg.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: "Roboto", sans-serif;
+    background-image: url("../img/night_mobile.jpg");
 }
 
 form {
@@ -21,10 +14,30 @@ form {
     text-align: center;
     padding: 2rem;
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+}
+
+label {
+    display: block;
+    margin-top: 10px;
+    cursor: pointer;
+    /* margin: 20px 0; */
+}
+
+.radio_item{
+    display: none !important;
+}
+
+.label_item {
+    opacity: 0.25;
+}
+
+.radio_item:checked + label {
+    opacity: 1;
 }
 
 .logo {
@@ -37,15 +50,12 @@ form {
 }
 
 .name_input {
-    width: 45%;
+    width: 65%;
     text-align: center;
 }
 
-label {
-    margin-right: .25rem;
-}
-
 input {
+    margin-top: 10px;
     padding: .25rem;
     text-align: center;
 }
@@ -61,11 +71,36 @@ input {
     padding: 1rem;
 }
 
+.male_img {
+    width: 75px;
+    height: 75px;
+}
+
+.female_img {
+    width: 70px;
+    height: 75px;
+}
+
+/* For Tablet */
 @media only screen and (min-width: 600px) {
+
+    body {
+        background-image: url("../img/night_full.jpg");
+    }
+
     form {
         font-size: 25px;
-        width: 80%;
+        background-color: rgba(255, 255, 255, .5);
+        text-align: center;
+        padding: 2rem;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
     }
+
     .male_female {
         width: 25%;
         justify-content: space-around;
