--- a/app/templates/landing-page.template.html
+++ b/app/templates/landing-page.template.html
@@ -1,5 +1,5 @@
     <header class="landing_page_logo">
-        <img src="../img/Other_Big_Full_Logo.png" alt="">
+        <img class="main_logo" src="../img/Other_Big_Full_Logo.png" alt="">
     </header>
 
     <div class="landing_button_container">
@@ -12,5 +12,5 @@
         <img src="../img/close-x-32.png" class="close-btn" ng-click="$ctrl.close();">
         <h1 class="about-title">Doomsday Trail</h1>
         <p>Doomsday Trail is a game based on the game Oregon Trail. During an apocolypse you need to grab food items to survive. Find out how long you will survive, if it all, by playing Doomsday Trail.</p>
-        
+
     </section>
