--- a/app/templates/locations.template.html
+++ b/app/templates/locations.template.html
@@ -1,4 +1,4 @@
-<nav-component></nav-component>
+<nav-component timeout="$ctrl.pageTimeout"></nav-component>
 <h1>{{ $ctrl.currentLocation[$ctrl.counter].name }}</h1>
 <div class="center">
     <h2>Items To Pick From</h2>
