--- a/app/css/prepper-stats.css
+++ b/app/css/prepper-stats.css
@@ -10,7 +10,6 @@ body {
 }
 
 form {
-    background-color: rgba(255, 255, 255, .5);
     text-align: center;
     padding: 2rem;
     width: 100%;
@@ -24,7 +23,6 @@ form {
 label {
     display: block;
     margin-top: 10px;
-    cursor: pointer;
     /* margin: 20px 0; */
 }
 
@@ -34,9 +32,10 @@ label {
 
 .label_item {
     opacity: 0.25;
+    cursor: pointer;
 }
 
-.radio_item:checked + label {
+.radio_item:checked + .label_item {
     opacity: 1;
 }
 
