--- a/app/templates/nav.template.html
+++ b/app/templates/nav.template.html
@@ -11,7 +11,7 @@
           <a class="nav-link" href="#!/">About <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#!/landing-page-component" ng-click="$ctrl.resetGame();">Quit</a>
+          <a class="nav-link" ng-click="$ctrl.resetGame();" href="#!/landing-page-component">Quit</a>
         </li>
       
         <li class="nav-item dropdown">
