--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -96,7 +96,8 @@ ng-view {
 
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
+  -webkit-appearance: none;
+  -moz-appearance: none;
   margin: 0; 
 }
 
