--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -15,7 +15,7 @@ body {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  font-family: "Impact", sans-serif;
+  /* font-family: "Impact", sans-serif; */
   text-align: center;
   color: white;
 }
