worked with story background img

--- a/app/css/lindsay-locations.css
+++ b/app/css/lindsay-locations.css
@@ -27,12 +27,12 @@ nav {
     justify-content: center;
     align-items: center;    
     background-color: #555555;
-    color: rgb(173, 171, 171);
+    color: white;
     border-bottom: #777777 1px solid;
 }
 
 .available-items {
-    width: 80%;
+    width: 45%;
     height: 40px;
     display: flex;
     padding: 3px;
@@ -116,21 +116,22 @@ nav {
         border-right: #777777 1px solid;
         border-left: #777777 1px solid;
         background-color: #555555;
-    }
-    /* .available-items-container {
-        height: 40vh;        
-        width: 40%;
-        border-right: #777777 1px solid;
-        border-left: #2e2e2e 1px solid;
-        background-color: #555555;
-    } */
+    }   
     .available-items-container {        
-        width: 40%;          
+        width: 40%; 
       
     }
-    .available-items {
-        width: 30%;        
+    .available-header {
+        margin-top: -25px;
+
+    }
+
+    .available-items-flex {
         display: flex;
+        flex-wrap: wrap;
+    }
+    .available-items {
+        width: 30%;   
         padding: 3px;      
         border: none;
         margin: 5px;
