--- a/app/css/story.css
+++ b/app/css/story.css
@@ -1,3 +1,13 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-image: url("../img/story-building-background-mobile.png"); 
+  
+}
+
 /* Story Bubble */
 .talk-bubble {
     margin: 40px;
@@ -55,6 +65,7 @@
     border-radius: 100%;
     color: black;
     background-color: white;
+    cursor: pointer;
   }
   .text {
     display: inline;
@@ -80,7 +91,17 @@
 
   /************************************************************** For Tablet */
 @media only screen and (min-width: 600px){
+  body {
+    background-image: url("../img/story-building-background.png"); 
+    
+  }
 
+  .talk-bubble {
+    margin-top: 200px; 
+    width: 50%;
+    height: auto;
+       
+  }
 }
 
 
