--- a/app/templates/lindsay-locations.template.html
+++ b/app/templates/lindsay-locations.template.html
@@ -1,4 +1,5 @@
 <nav-component timeout="$ctrl.pageTimeout"></nav-component>
+
 <div class="main">
     <div class="man_box" style="{{$ctrl.timerAnimation}}">
         <div class="man"></div>
@@ -8,18 +9,22 @@
 <section class="footer-content">
 
     <section class="story">
-        <h3>What is going on? </h3>
+        <h3>You are at {{ $ctrl.currentLocation[$ctrl.counter].name }}</h3>
         <p> {{ $ctrl.currentMessage }} </p>
     </section>
 
     <section class="available-items-container">
-        <h3>Available Items</h3>
-        <div class="available-items" ng-repeat="food in $ctrl.locationItems track by $index" ng-click="$ctrl.moveToBag($index)">
+        <h3 class="available-header">Available Items</h3>
+        
 
-            <img class="hidden-for-small" class="food_img" ng-src="{{ food.img }}" style="width: 50px; height: 50px;">
-            <p class="custom-p">{{ food.food_name }}</p>
-            <!-- show on hover-->
+        <div class="available-items-flex">
+            <div class="available-items" ng-repeat="food in $ctrl.locationItems track by $index" ng-click="$ctrl.moveToBag($index)">
+                <img class="hidden-for-small" class="food_img" ng-src="{{ food.img }}" style="width: 50px; height: 50px;">
+                <p class="custom-p">{{ food.food_name }}</p>
+                <!-- show on hover-->
+            </div>
         </div>
+
         <button class="btn btn-danger btn-block margin5 percent80" ng-click="$ctrl.moveToNextLocation();">Bug Out!</button>
     </section>
 
