--- a/app/css/lindsay-locations.css
+++ b/app/css/lindsay-locations.css
@@ -32,7 +32,7 @@ nav {
 }
 
 .available-items {
-    width: 80%;
+    width: 45%;
     height: 40px;
     display: flex;
     padding: 3px;
@@ -94,6 +94,11 @@ nav {
 .question-mark {
     width: 50%;
 }
+
+.food_img {
+    border-radius: 100%;
+    border: 2px solid yellow;
+}
 /***************************************************************** Media Queries ***************/
 
 @media only screen and (min-width: 600px) {
@@ -117,20 +122,14 @@ nav {
         border-left: #777777 1px solid;
         background-color: #555555;
     }
-    /* .available-items-container {
-        height: 40vh;        
-        width: 40%;
-        border-right: #777777 1px solid;
-        border-left: #2e2e2e 1px solid;
-        background-color: #555555;
-    } */
+  
     .available-items-container {        
         width: 40%;          
       
     }
     .available-items {
         width: 30%;        
-        display: flex;
+        
         padding: 3px;      
         border: none;
         margin: 5px;
