--- a/app/templates/end.template.html
+++ b/app/templates/end.template.html
@@ -1,14 +1,14 @@
 <nav-component></nav-component>
 <h1>The End?</h1>
-<p>After some struggling with your directions, you eventually make it to Adam's Hidden Bunker. With your remaining rations, you use the secret knock on his door, and moments later, he opens the hatch to your relief. Your journey has ended... for now.</p>
+<p>Although you struggled with your directions, you eventually make it to Adam's Hidden Bunker. With your remaining rations, you use the secret knock on his door, and moments later, he opens the hatch to your relief. Your journey has ended... for now.</p>
 
 
 <h3 class="final-bag"> In your bug out bag:</h3>
 <div class="final_container">
-    <div class="final_items" ng-repeat="item in $ctrl.endBag track by $index">
-        <img class="food_img" ng-src="{{ item.img }}">
-        <p>{{ item.food_name }}</p>
-        <p>{{ item.cal }}</p>
+    <div class="final-items" ng-repeat="item in $ctrl.endBag track by $index">
+        <img class="final-food-img" ng-src="{{ item.img }}">
+        <p>{{ item.food_name }} </p><br>
+        <p>{{ item.cal }} Calories</p>
     </div>
 </div>
 
