--- a/app/templates/landing-page.template.html
+++ b/app/templates/landing-page.template.html
@@ -1,5 +1,5 @@
     <header class="landing_page_logo">
-        <img class="main_logo" src="../img/Other_Big_Full_Logo.png" alt="">
+        <img class="main_logo glow secondary-glow" src="../img/Other_Big_Full_Logo.png" alt="">
     </header>
 
     <div class="landing_button_container">
