--- a/app/templates/nav.template.html
+++ b/app/templates/nav.template.html
@@ -19,9 +19,9 @@
             Prepper Resources 
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Food Tips</a>
-            <a class="dropdown-item" href="#">Water Tips</a>
-            <a class="dropdown-item" href="#">Shelter Tips</a>
+            <a class="dropdown-item" href="http://channel.nationalgeographic.com/doomsday-preppers/articles/get-prepped-food/">Food Tips</a>
+            <a class="dropdown-item" href="http://channel.nationalgeographic.com/doomsday-preppers/articles/get-prepped-water/">Water Tips</a>
+            <a class="dropdown-item" href="http://channel.nationalgeographic.com/doomsday-preppers/articles/get-prepped-shelter/">Shelter Tips</a>
           </div>
         </li>
       </ul>
