--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -90,22 +90,33 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0; 
 }
 
+.glow {
+  filter: drop-shadow( 0 0 0 2px white);
+  animation: glow 3s infinite;
+   /* Use -webkit- only if supporting: Chrome < 54, iOS < 9.3, Android < 4.4.4 */
+}
+
+
 @keyframes glow {
     0% {
-      box-shadow:  0 0 10px white;
+      filter: drop-shadow( 0px 0px 5px white );
+      /* text-shadow:  0 0 white; */
     }
     
     15% {
-      box-shadow: 2px 2px 10px rgb(222, 240, 63),
-                   -2px -2px 10px rgb(222, 240, 63);
+      filter: drop-shadow( 0px 0px 8px rgb(222, 240, 63) );
+      /* text-shadow: 2px 2px rgb(222, 240, 63),
+                   -2px -2px rgb(222, 240, 63); */
     }
     30% {
-      box-shadow: 2px 2px 4px rgba(234, 236, 99, 0.7),
-                   -2px -2px 4px rgba(234, 236, 236, 99, 0.7);
+      filter: drop-shadow( 0px 0px 2px rgba(234, 236, 99, 0.7) );
+      /* text-shadow: 2px 2px rgba(234, 236, 99, 0.7),
+                   -2px -2px rgba(234, 236, 99, 0.7); */
     }
     50% {
-      box-shadow: 20px 20px 50px rgba(234, 236, 115, 0.5),
-                   -20px -20px 50px rgba(234, 236, 115, 0.5);
+      filter: drop-shadow( 0px 0px 7px rgba(234, 236, 115, 0.5) );
+      /* text-shadow: 20px 20px rgba(234, 236, 115, 0.5),
+                   -20px -20px rgba(234, 236, 115, 0.5); */
     }
   }
 /******* Running Timer *******/
